--- a/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
+++ b/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
@@ -30,12 +30,18 @@ a.default-ac-anchor:visited:active {
 }
 
 .default-ac-container,
+.ac-container {
+    background-color: #f9f9f9 !important; /* The important overrides inline CSS properties added via JS */
+}
+
+.default-ac-container,
 .default-ac-input {
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .default-ac-container:first-child {
+    background-color: #f9f9f9 !important;
     padding-right: 0 !important; /* The important overrides inline CSS properties added via JS */
 }
 
