--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -22,7 +22,6 @@
     content: url("/assets/icons/icon-close-hover.svg");
 }
 
-
 .acd-icon-drag::before {
     content: url("/assets/icons/icon-move.svg");
 }
@@ -383,10 +382,23 @@
     background-color: #f9f9f9;
     height: calc(100% - 30px);
     padding-bottom: 5px;
-    padding-top: 30px;
+}
+
+.treeview__section-title {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 0;
+    overflow: hidden;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 
 .treeview__container {
+    background-color: #f9f9f9;
     list-style: none;
     margin: 0;
     padding-left: 0;
@@ -501,4 +513,25 @@
 
 .is-folded {
     display: none;
+}
+
+/*
+* Fixes Properties Panel CSS inline styles added via JavaScript
+*/
+.default-ac-columnSet.wrapper .default-ac-container:nth-child(1),
+.default-ac-columnSet.wrapper .default-ac-container:nth-child(3) {
+    flex-direction: row !important;
+}
+
+.default-ac-columnSet.wrapper .default-ac-container:nth-child(1) {
+    justify-content: flex-end !important;
+    align-items: center;
+    padding-right: 6px !important;
+    flex: 1 1 60px !important;
+    margin-left: 10px;
+}
+
+.default-ac-columnSet.wrapper .default-ac-container:nth-child(3) {
+    padding-left: 0 !important;
+    flex: 1 1 125px !important;
 }
