--- a/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
+++ b/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
@@ -36,6 +36,11 @@ a.default-ac-anchor:visited:active {
     background-color: #f9f9f9 !important; /* The important overrides inline CSS properties added via JS */
 }
 
+[id="treeViewSheetHost"],
+[id="propertySheetHost"] {
+    min-width: 205px;
+}
+
 .default-ac-container,
 .default-ac-input {
     padding-left: 20px;
