--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -103,6 +103,12 @@
     height: 30px;
     justify-content: space-between;
     padding: 6px 12px;
+    user-select: none;
+}
+
+.aside-panel .treeview-menu,
+.aside-panel .properties-menu  {
+    cursor: pointer;
 }
 
 .acd-aside-menu__title,
@@ -123,21 +129,20 @@
     display: flex;
 }
 
-.acd-aside-menu__icon,
-.treeview-menu__icon,
-.properties-menu__icon {
-    background-image: url("/assets/icons/hide.svg");
-    background-repeat: no-repeat;
-    background-position: center;
+.acd-aside-menu__icon::before,
+.treeview-menu__icon::before,
+.properties-menu__icon::before {
+    content: "\F166";
     display: inline-block;
-    height: 20px;
+    font-family: "FabricMDL2Icons";
     margin-right: 4px;
-    width: 20px;
+    margin-top: 3px;
 }
 
-.icon--expand {
-    background-image: url("/assets/icons/expand.svg");
+.icon--expand::before {
+    content: "\F164";
     margin-right: 0;
+    font-family: "FabricMDL2Icons";
 }
 
 .acd-aside-menu__description,
@@ -226,60 +231,73 @@
     padding-left: 36px;
 }
 
-.aside-item__icon--actionset {
-    background-image: url("/assets/icons/actionset.svg");
+.aside-item__icon--actionset::before,
+.aside-item__icon--columnset::before,
+.aside-item__icon--container::before,
+.aside-item__icon--factset::before,
+.aside-item__icon--image::before,
+.aside-item__icon--imageset::before,
+.aside-item__icon--choice::before,
+.aside-item__icon--inputchoiceset::before,
+.aside-item__icon--inputdate::before,
+.aside-item__icon--inputnumber::before,
+.aside-item__icon--inputtext::before,
+.aside-item__icon--inputtime::before,
+.aside-item__icon--inputtoggle::before,
+.aside-item__icon--textblock::before {
+    font-family: "FabricMDL2Icons";
+    left: 28px;
+    margin-top: 3px;
+    position: absolute;
 }
 
-.aside-item__icon--columnset {
-    background-image: url("/assets/icons/column-set.svg");
+.aside-item__icon--columnset::before {
+    content: "\F1D5";
 }
 
-.aside-item__icon--container {
-    background-image: url("/assets/icons/container.svg");
+.aside-item__icon--container::before {
+    content: "\E739";
 }
 
-.aside-item__icon--factset {
-    background-image: url("/assets/icons/fact-set.svg");
+.aside-item__icon--factset::before {
+    content: "\F2A2";
 }
 
-.aside-item__icon--image {
-    background-image: url("/assets/icons/image.svg");
+.aside-item__icon--image::before {
+    content: "\EB9F";
 }
 
-.aside-item__icon--imageset {
-    background-image: url("/assets/icons/image-set.svg");
+.aside-item__icon--imageset::before {
+    /* TODO: Can't find content value in FabricUI */
+    content: "\EEC2";
 }
 
-.aside-item__icon--choice {
-    background-image: url("/assets/icons/choice.svg");
+.aside-item__icon--inputchoiceset::before {
+    content: "\F2C7";
 }
 
-.aside-item__icon--inputchoiceset {
-    background-image: url("/assets/icons/choiceset.svg");
+.aside-item__icon--inputdate::before {
+    content: "\E787";
 }
 
-.aside-item__icon--inputdate {
-    background-image: url("/assets/icons/date.svg");
+.aside-item__icon--inputnumber::before {
+    content: "\EDC4";
 }
 
-.aside-item__icon--inputnumber {
-    background-image: url("/assets/icons/inputnumber.svg");
+.aside-item__icon--inputtext::before {
+    content: "\EDC3";
 }
 
-.aside-item__icon--inputtext {
-    background-image: url("/assets/icons/inputtext.svg");
+.aside-item__icon--inputtime::before {
+    content: "\E917";
 }
 
-.aside-item__icon--inputtime {
-    background-image: url("/assets/icons/time.svg");
+.aside-item__icon--inputtoggle::before {
+    content: "\E73A";
 }
 
-.aside-item__icon--inputtoggle {
-    background-image: url("/assets/icons/toggle.svg");
-}
-
-.aside-item__icon--textblock {
-    background-image: url("/assets/icons/textblock.svg");
+.aside-item__icon--textblock::before {
+    content: "\EC7D";
 }
 
 /*
@@ -313,9 +331,11 @@
     transform: translate(-70px, 211px) rotate(90deg);
 }
 
-.aside-panel .treeview-menu__icon,
-.aside-panel .properties-menu__icon {
-    background-image: url("/assets/icons/expand.svg");
+.aside-panel .treeview-menu__icon::before,
+.aside-panel .properties-menu__icon::before {
+    content: "\F164";
+    margin-right: 0;
+    font-family: "FabricMDL2Icons";
 }
 
 /*
@@ -352,16 +372,23 @@
     position: absolute;
 }
 
+.toolbar-btn__icon-copy::before,
+.toolbar-btn__icon-fullscreen::before,
+.toolbar-btn__icon-fullscreen.is-fullscreen::before {
+    font-family: "FabricMDL2Icons";
+}
+
+
 .toolbar-btn__icon-copy::before {
-    content: url("/assets/icons/copy.svg");
+    content: "\E8C8";
 }
 
 .toolbar-btn__icon-fullscreen::before {
-    content: url("/assets/icons/fullscreen.svg");
+    content: "\E740";
 }
 
 .toolbar-btn__icon-fullscreen.is-fullscreen::before {
-    content: url("/assets/icons/exitfullscreen.svg");
+    content: "\E73F";
 }
 
 /*
@@ -422,80 +449,103 @@
     cursor: pointer;
     height: 20px;
     margin-right: 2px;
+    margin-top: -3px;
     width: 20px;
 }
 
-.treeview__icon--arrow {
-    background-image: url("/assets/icons/arrow.svg");
+.treeview__icon--arrow::before,
+.treeview__icon--textblock::before,
+.treeview__icon--factset::before,
+.treeview__icon--image::before,
+.treeview__icon--imageset::before,
+.treeview__icon--inputtext::before,
+.treeview__icon--inputtoggle::before,
+.treeview__icon--inputnumber::before,
+.treeview__icon--inputdate::before,
+.treeview__icon--inputtime::before,
+.treeview__icon--inputchoiceset::before,
+.treeview__icon--actionsubmit::before,
+.treeview__icon--actionopenurl::before,
+.treeview__icon--container::before,
+.treeview__icon--column::before,
+.treeview__icon--columnset::before,
+.treeview__icon--actionshowcard::before,
+.treeview__icon--arrow.is-rotated::before {
+    font-family: "FabricMDL2Icons";
+}
+
+.treeview__icon--adaptivecard {
+    display: none;
+}
+
+.treeview__icon--arrow::before {
+    content: "\F08E";
     margin-right: 0;
 }
 
-.treeview__icon--textblock {
-    background-image: url("/assets/icons/textblock.svg");
+.treeview__icon--textblock::before {
+    content: "\EC7D";
 }
 
-.treeview__icon--factset {
-    background-image: url("/assets/icons/fact-set.svg");
+.treeview__icon--factset::before {
+    content: "\F2A2";
 }
 
-.treeview__icon--image {
-    background-image: url("/assets/icons/image.svg");
+.treeview__icon--image::before {
+    content: "\EB9F";
 }
 
-.treeview__icon--imageset {
-    background-image: url("/assets/icons/image-set.svg");
+.treeview__icon--imageset::before {
+    /* TODO: Can't find content value in FabricUI */
+    content: "\EEC2";
 }
 
-.treeview__icon--inputtext {
-    background-image: url("/assets/icons/inputtext.svg");
+.treeview__icon--inputtext::before {
+    content: "\EDC3";
 }
 
-.treeview__icon--inputtoggle {
-    background-image: url("/assets/icons/toggle.svg");
+.treeview__icon--inputtoggle::before {
+    content: "\E73A";
 }
 
-.treeview__icon--inputnumber {
-    background-image: url("/assets/icons/inputnumber.svg");
+.treeview__icon--inputnumber::before {
+    content: "\EDC4";
 }
 
-.treeview__icon--inputdate {
-    background-image: url("/assets/icons/icon-date.svg");
+.treeview__icon--inputdate::before {
+    content: "\E787";
 }
 
-.treeview__icon--inputtime {
-    background-image: url("/assets/icons/time.svg");
+.treeview__icon--inputtime::before {
+    content: "\E917";
 }
 
-.treeview__icon--inputchoiceset {
-    background-image: url("/assets/icons/choiceset.svg");
+.treeview__icon--inputchoiceset::before {
+    content: "\F2C7";
 }
 
-.treeview__icon--actionsubmit {
-    background-image: url("/assets/icons/submit.svg");
+.treeview__icon--actionopenurl::before {
+    content: "\E89F";
 }
 
-.treeview__icon--actionopenurl {
-    background-image: url("/assets/icons/open-url.svg");
+.treeview__icon--container::before {
+    content: "\E739";
 }
 
-.treeview__icon--container {
-    background-image: url("/assets/icons/container.svg");
+.treeview__icon--column::before {
+    content: "\F1D4";
 }
 
-.treeview__icon--column {
-    background-image: url("/assets/icons/column.svg");
+.treeview__icon--columnset::before {
+    content: "\F1D5";
 }
 
-.treeview__icon--columnset {
-    background-image: url("/assets/icons/column-set.svg");
+.treeview__icon--actionshowcard::before {
+    content: "\EEBD";
 }
 
-.treeview__icon--actionshowcard {
-    background-image: url("/assets/icons/showcard.svg");
-}
-
-.treeview__icon--arrow.is-rotated {
-    background-image: url("/assets/icons/arrow-rotated.svg");
+.treeview__icon--arrow.is-rotated::before {
+    content: "\F08F";
 }
 
 .btn {
@@ -511,8 +561,6 @@
 /*
 * Fixes Properties Panel CSS inline styles added via JavaScript
 */
-
-
 .default-ac-columnSet.wrapper .default-ac-container:nth-child(1) {
     padding-right: 6px !important;
     flex: 1 1 140px !important;
