Fix/json overflow (#46)
* Fixed JSON title width

* Moved to HTML monaco-editor's nav-title

* Fixed toggle class implementation when updatingLayout in the treeview

* Fixed aside scrollbar

* Fixed properties panel label's width

* Fixed JSON panel height when toggled

* Fixed properties panel paddings and FactSet padding-right and padding-left

* Fixed treeview background-color

--- a/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
+++ b/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
@@ -31,13 +31,18 @@ a.default-ac-anchor:visited:active {
 
 [id="treeViewSheetHost"],
 [id="propertySheetHost"] {
+    background-color: #f9f9f9;
     min-width: 205px;
+    position: relative;
 }
 
-.default-ac-container,
-.default-ac-input {
+.properties-items {
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.default-ac-container:not(:last-of-type) {
+    padding-right: 10px;;
 }
 
 .default-ac-container + div {
