--- a/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
+++ b/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
@@ -29,15 +29,38 @@ a.default-ac-anchor:visited:active {
     color: #004D84;
 }
 
-.default-ac-container.default-ac-selectable, .default-ac-columnSet.default-ac-selectable {
-    padding: 0px;
+[id="treeViewSheetHost"],
+[id="propertySheetHost"] {
+    background-color: #f9f9f9;
+    min-width: 205px;
+    position: relative;
 }
 
-.default-ac-container.default-ac-selectable:hover, .default-ac-columnSet.default-ac-selectable:hover {
+.properties-items {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.default-ac-container:not(:last-of-type) {
+    padding-right: 10px;;
+}
+
+.default-ac-container + div {
+    display: none !important; /* The important overrides inline CSS properties added via JS */
+}
+
+.default-ac-container.default-ac-selectable,
+.default-ac-columnSet.default-ac-selectable {
+    padding: 0;
+}
+
+.default-ac-container.default-ac-selectable:hover,
+.default-ac-columnSet.default-ac-selectable:hover {
     background-color: rgba(0, 0, 0, 0.1) !important;
 }
 
-.default-ac-container.default-ac-selectable:active, .default-ac-columnSet.default-ac-selectable:active {
+.default-ac-container.default-ac-selectable:active,
+.default-ac-columnSet.default-ac-selectable:active {
     background-color: rgba(0, 0, 0, 0.15) !important;
 }
 
@@ -110,6 +133,8 @@ a.default-ac-anchor:visited:active {
     font-family: "Segoe UI", sans-serif;
     font-size: 14px;
     color: black;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .default-ac-input.default-ac-textInput {
@@ -120,11 +145,18 @@ a.default-ac-anchor:visited:active {
     height: 72px;
 }
 
-.default-ac-input.default-ac-textInput, .default-ac-input.default-ac-numberInput, .default-ac-input.default-ac-dateInput, .default-ac-input.default-ac-timeInput {
+.default-ac-input.default-ac-textInput,
+.default-ac-input.default-ac-numberInput,
+.default-ac-input.default-ac-dateInput,
+.default-ac-input.default-ac-timeInput {
     height: 31px;
 }
 
-.default-ac-input.default-ac-textInput, .default-ac-input.default-ac-numberInput, .default-ac-input.default-ac-dateInput, .default-ac-input.default-ac-timeInput, .default-ac-input.default-ac-multichoiceInput {
+.default-ac-input.default-ac-textInput,
+.default-ac-input.default-ac-numberInput,
+.default-ac-input.default-ac-dateInput,
+.default-ac-input.default-ac-timeInput,
+.default-ac-input.default-ac-multichoiceInput {
     border: 1px solid #DDDDDD;
     padding: 4px 8px 4px 8px;
 }
