--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -1,3 +1,13 @@
+.acd-icon-bolt::before,
+.acd-icon-addColumn::before,
+.acd-icon-remove::before,
+.acd-icon-drag::before {
+    border: 1px solid #78dd03;
+    background-color: #ffffff;
+    color: #979797;
+    font-family: "FabricMDL2Icons";
+}
+
 .acd-icon-bolt::before {
     content: "\E945";
 }
@@ -12,6 +22,20 @@
 
 .acd-icon-drag::before {
     content: "\E7C2";
+}
+
+.acd-icon-bolt:hover::before,
+.acd-icon-remove:hover::before,
+.acd-icon-addColumn:hover::before {
+    background-color: #e3ffda;
+    color: #000000;
+    cursor: pointer;
+}
+
+.acd-icon-drag:hover::before {
+    background-color: #e3ffda;
+    color: #000000;
+    cursor: move;
 }
 
 .acd-icon-image::before {
@@ -31,49 +55,8 @@
     border-color: transparent;
 }
 
-.acd-peerButton {
-    width: 20px;
-    height: 20px;
-    font-family: 'FabricMDL2Icons';
-    font-size: 14px;
-    font-weight: bold;
-    font-style: normal;
-    font-weight: normal;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid red;
-    color: red;
-    background-color: white;
-    cursor: default;
-    user-select: none;
-}
-
-.acd-circularButton {
-    border-radius: 50%;
-}
-
-.acd-peerButton:hover {
-    background-color: red;
-    color: white;
-}
-
-.acd-peerButton:active {
-    background-color: firebrick;
-    border: 1px solid firebrick;
-    color: white;
-}
-
-.acd-palette-item {
-    border: 1px solid #CCCCCC;
-    padding: 8px;
-    margin-bottom: 4px;
-    background-color: white;
-    cursor: default;
-}
-
 .acd-palette-item:hover {
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
 }
 
 .acd-peer {
@@ -85,7 +68,7 @@
 }
 
 .acd-peer.selected {
-    border: 1px solid red !important;
+    border: solid 1px #78dd03;
 }
 
 .acd-peer.dragover {
@@ -94,9 +77,6 @@
 
 .acd-peer.dragover:hover {
     background-color: none;
-}
-
-.acd-peer.dragging {
 }
 
 .acd-peer.dragging:hover {
@@ -109,4 +89,509 @@
 
 .acd-separation.selected {
     background-color: rgba(255, 0, 0, 0.2);
+}
+
+/*
+* Header and Aside menus
+*/
+.aside-panel .bullet_wrapper  {
+    cursor: pointer;
+}
+
+.bullet__wrapper {
+    align-items: center;
+    background-color: #d8d8d8;
+    display: flex;
+    height: 30px;
+    justify-content: space-between;
+    padding: 6px 12px;
+}
+
+.json-wrapper .bullet__wrapper {
+    margin-bottom: 10px;
+}
+
+.bullet__title {
+    color: #000000;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 120px;
+}
+
+.bullet {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+}
+
+.bullet__icon::before {
+    content: "\F166";
+    display: inline-block;
+    font-family: "FabricMDL2Icons";
+    margin-right: 4px;
+    margin-top: 3px;
+}
+
+.icon--expand::before {
+    content: "\F164";
+    margin-right: 0;
+    font-family: "FabricMDL2Icons";
+}
+
+.bullet__description {
+    color: #4a4a4a;
+}
+
+.is-closed .bullet__icon::before {
+    content: "\F164";
+    font-family: "FabricMDL2Icons";
+}
+
+/*
+* Aside
+*/
+.aside {
+    background-color: #f9f9f9;
+    border-right: 1px solid #d2d2d2;
+    flex: 1 0 180px;
+    overflow-y: auto;
+}
+
+.is-toggled .bullet__wrapper {
+    width: 170px;
+    height: 30px;
+}
+
+.is-toggled .bullet__wrapper {
+    transform: translate(-72px, 70px) rotate(-90deg);
+}
+
+.aside.is-toggled {
+    flex-basis: 29px;
+    overflow: hidden;
+}
+
+.is-hidden {
+    display: none;
+}
+
+.aside-items {
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-left: 16px;
+    padding-top: 16px;
+}
+
+.aside-item {
+    color: #4a4a4a;
+    cursor: move;
+    font-size: 14px;
+    list-style-type: none;
+    margin-bottom: 8px;
+    white-space: nowrap;
+}
+
+.aside-title {
+    align-items: center;
+    color: #4a4a4a;
+    display: flex;
+    font-size: 14px;
+    font-weight: 600;
+    list-style-type: none;
+    margin-bottom: 6px;
+    position: relative;
+    white-space: nowrap;
+}
+
+.aside-title:not(:first-of-type) {
+    margin-top: 12px;
+}
+
+.aside-title::after {
+    border-bottom: 1px solid #e0e0e0;
+    content: "";
+    margin-bottom: -3px;
+    margin-left: 8px;
+    width: 100%;
+}
+
+.aside-item__icon {
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 20px;
+    margin-right: 8px;
+    width: 20px;
+    padding-left: 36px;
+}
+
+.aside-item__icon--actionset::before,
+.aside-item__icon--columnset::before,
+.aside-item__icon--container::before,
+.aside-item__icon--factset::before,
+.aside-item__icon--image::before,
+.aside-item__icon--imageset::before,
+.aside-item__icon--choice::before,
+.aside-item__icon--inputchoiceset::before,
+.aside-item__icon--inputdate::before,
+.aside-item__icon--inputnumber::before,
+.aside-item__icon--inputtext::before,
+.aside-item__icon--inputtime::before,
+.aside-item__icon--inputtoggle::before,
+.aside-item__icon--textblock::before {
+    font-family: "FabricMDL2Icons";
+    left: 28px;
+    margin-top: 3px;
+    position: absolute;
+}
+
+.aside-item__icon--columnset::before {
+    content: "\F1D5";
+}
+
+.aside-item__icon--container::before {
+    content: "\E739";
+}
+
+.aside-item__icon--factset::before {
+    content: "\F2A2";
+}
+
+.aside-item__icon--image::before {
+    content: "\EB9F";
+}
+
+.aside-item__icon--imageset::before {
+    /* TODO: Can't find content value in FabricUI */
+    content: "\EEC2";
+}
+
+.aside-item__icon--inputchoiceset::before {
+    content: "\F2C7";
+}
+
+.aside-item__icon--inputdate::before {
+    content: "\E787";
+}
+
+.aside-item__icon--inputnumber::before {
+    content: "\EDC4";
+}
+
+.aside-item__icon--inputtext::before {
+    content: "\EDC3";
+}
+
+.aside-item__icon--inputtime::before {
+    content: "\E917";
+}
+
+.aside-item__icon--inputtoggle::before {
+    content: "\E73A";
+}
+
+.aside-item__icon--textblock::before {
+    content: "\EC7D";
+}
+
+/*
+* Aside Panel
+*/
+.aside-panel {
+    display: none;
+}
+
+.aside-panel.is-active {
+    background-color: #f9f9f9;
+    display: block;
+    height: 100vh;
+    position: relative;
+    width: 31px;
+    border-left: 1px solid #d2d2d2;
+}
+
+.aside-panel .bullet__wrapper {
+    height: 30px;
+    transform: translate(-70px, 70px) rotate(90deg);
+    width: 170px;
+    align-items: center;
+    background-color: #d8d8d8;
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 12px;
+}
+
+.aside-panel nav:nth-child(2) {
+    transform: translate(-70px, 211px) rotate(90deg);
+}
+
+.aside-panel .bullet__icon::before {
+    content: "\F164";
+    margin-right: 0;
+    font-family: "FabricMDL2Icons";
+}
+
+/*
+* Toolbar
+*/
+.toolbar-btn {
+    align-items: center;
+    border: 1px solid transparent;
+    cursor: pointer;
+    display: flex;
+    font-style: normal;
+    font-weight: normal;
+    justify-content: center;
+    margin-right: 50px;
+    padding-bottom: 5px;
+    padding-left: 38px;
+    padding-right: 14px;
+    padding-top: 5px;
+    position: relative;
+    user-select: none;
+}
+
+.toolbar-btn:active {
+    border: 1px solid black;
+}
+
+.toolbar-btn:hover {
+    background-color: white;
+}
+
+.toolbar-btn__icon-copy::before,
+.toolbar-btn__icon-fullscreen::before {
+    left: 14px;
+    position: absolute;
+}
+
+.toolbar-btn__icon-copy::before,
+.toolbar-btn__icon-fullscreen::before,
+.toolbar-btn__icon-fullscreen.is-fullscreen::before {
+    font-family: "FabricMDL2Icons";
+}
+
+
+.toolbar-btn__icon-copy::before {
+    content: "\E8C8";
+}
+
+.toolbar-btn__icon-fullscreen::before {
+    content: "\E740";
+}
+
+.toolbar-btn__icon-fullscreen.is-fullscreen::before {
+    content: "\E73F";
+}
+
+/*
+* Treeview Style
+*/
+.treeview-items {
+    background-color: #f9f9f9;
+    height: calc(100% - 50px);
+    padding-bottom: 5px;
+}
+
+.treeview-items > .treeview__container {
+    margin-bottom: 20px;
+    padding-top: 20px;
+}
+
+.treeview__section-title {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 0;
+    overflow: hidden;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
+.treeview__container {
+    background-color: #f9f9f9;
+    list-style: none;
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    padding-left: 0;
+    width: 100%;
+}
+
+.treeview__element {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.treeview__element:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.treeview__element.is-empty {
+    margin-bottom: 0;
+}
+
+.treeview__element:hover {
+    cursor: pointer;
+}
+
+.treeview__element.is-selected {
+    background-color: #e7e7e7;
+}
+
+.treeview__icon {
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+    height: 14px;
+    margin-right: 6px;
+    margin-top: -2px;
+    padding: 0;
+    width: 14px;
+}
+
+button.treeview__icon {
+    margin-bottom: -2px;
+    width: 18px;
+}
+
+button.treeview__icon:focus {
+    outline-style: none;
+}
+
+.treeview__icon--arrow::before,
+.treeview__icon--textblock::before,
+.treeview__icon--factset::before,
+.treeview__icon--image::before,
+.treeview__icon--imageset::before,
+.treeview__icon--inputtext::before,
+.treeview__icon--inputtoggle::before,
+.treeview__icon--inputnumber::before,
+.treeview__icon--inputdate::before,
+.treeview__icon--inputtime::before,
+.treeview__icon--inputchoiceset::before,
+.treeview__icon--actionsubmit::before,
+.treeview__icon--actionopenurl::before,
+.treeview__icon--container::before,
+.treeview__icon--column::before,
+.treeview__icon--columnset::before,
+.treeview__icon--actionshowcard::before,
+.treeview__icon--arrow.is-rotated::before {
+    font-family: "FabricMDL2Icons";
+}
+
+.treeview__icon--adaptivecard {
+    display: none;
+}
+
+.treeview__icon--arrow::before {
+    content: "\F08E";
+    margin-bottom: -3px;
+    margin-right: 0;
+}
+
+.treeview__icon--textblock::before {
+    content: "\EC7D";
+}
+
+.treeview__icon--factset::before {
+    content: "\F2A2";
+}
+
+.treeview__icon--image::before {
+    content: "\EB9F";
+}
+
+.treeview__icon--imageset::before {
+    /* TODO: Can't find content value in FabricUI */
+    content: "\EEC2";
+}
+
+.treeview__icon--inputtext::before {
+    content: "\EDC3";
+}
+
+.treeview__icon--inputtoggle::before {
+    content: "\E73A";
+}
+
+.treeview__icon--inputnumber::before {
+    content: "\EDC4";
+}
+
+.treeview__icon--inputdate::before {
+    content: "\E787";
+}
+
+.treeview__icon--inputtime::before {
+    content: "\E917";
+}
+
+.treeview__icon--inputchoiceset::before {
+    content: "\F2C7";
+}
+
+.treeview__icon--actionopenurl::before {
+    content: "\E89F";
+}
+
+.treeview__icon--container::before {
+    content: "\E739";
+}
+
+.treeview__icon--column::before {
+    content: "\F1D4";
+}
+
+.treeview__icon--columnset::before {
+    content: "\F1D5";
+}
+
+.treeview__icon--actionshowcard::before {
+    content: "\EEBD";
+}
+
+.treeview__icon--arrow.is-rotated::before {
+    content: "\F08F";
+}
+
+.is-folded {
+    display: none;
+}
+
+/*
+* Fixes Properties Panel CSS inline styles added via JavaScript
+*/
+.default-ac-columnSet.wrapper .default-ac-container:nth-child(1) {
+    padding-right: 6px !important;
+    flex: 1 1 140px !important;
+    margin-left: 10px;
+    max-width: 34% !important;
+}
+
+.default-ac-columnSet.wrapper .default-ac-container:nth-child(3) {
+    padding-left: 0 !important;
+    flex: 2 1 125px !important;
+}
+
+.acd-peerButton[type="button"] {
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+}
+
+.content {
+    overflow-x: hidden !important;
+}
+
+.monaco-editor,
+.overflow-guard {
+    width: 100% !important;
 }
